fix: Remove overflows and absolute positioning for vignette

--- a/source/stylesheets/components/_call_to_action.scss
+++ b/source/stylesheets/components/_call_to_action.scss
@@ -1,10 +1,7 @@
 .c-cta {
   font-family: $sans-serif-font;
   position: relative;
-  overflow: hidden;
-  max-height: 600px;
   margin: 0 auto 4 * $global-line-height;
-  padding: 0;
   color: white;
   text-align: center;
 
@@ -24,6 +21,10 @@
   }
 
   &--vignette {
+    background-repeat: no-repeat;
+    background-position: top left;
+    background-size: cover;
+
     &:before {
       content: "";
       display: block;
@@ -39,10 +40,9 @@
   }
 
   &__content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: relative;
+    top: 0;
+    left: 0;
   }
 
   &__image {
